: add : add opengraph.pug

--- a/views/opengraph.pug
+++ b/views/opengraph.pug
@@ -11,6 +11,8 @@ html(lang="ru")
         meta(property="og:url" content= url)
         if graph.title
             meta(property='og:title' content= graph.title)
+        else
+            meta(property='og:title' content="На главную")
 
         meta(property='og:description' content= graph.description)
         meta(name='description' content= graph.description)
